# mercado-publico-solanea-app

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.yml  index.html  index.html.html
backend/: .env.example  Dockerfile  README.md  alembic.ini  auth.py  database.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  seed.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: auth.py  cessionarios.py  dashboard.py  fiscais.py  pagamentos.py  relatorios.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  certidao.py  cessionario.py  fiscal.py  pagamento.py  user.py
backend/app/db/: database.py  seed.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: excel_service.py  pdf_service.py
backend/routers/: auth.py  cessionarios.py  pagamentos.py  relatorios.py  users.py
backend/scripts/: README_IMPORTACAO.md  cessionarios_pdf.txt  importar_cessionarios.py  migrar_sqlite_para_postgres.py  migrate_add_data_validade_to_certidoes.py  migrate_add_fiscal_id_to_users.py  migrate_sqlite_to_postgres.py  recuperar_admin.py
backend/tests/: conftest.py  test_auth.py
data/: mercado.db
frontend/: .env.example  Dockerfile  README.md  app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useInactivityLogout.ts
scripts/: deploy-producao.sh
stitch_gest_o_de_mercados_p_blicos/central_de_certid_es/: code.html
(+42 files in other folders)
